794695052 8.18 [AIGI] Got Questions? - fixed text alignment on mobile

--- a/wp-content/themes/aigi/assets/css/text-with-media-styles.css
+++ b/wp-content/themes/aigi/assets/css/text-with-media-styles.css
@@ -243,6 +243,7 @@
     }
     .text-media__content-column {
         min-height: unset;
+        width: 100%;
     }
     .text-media__content .btn-group .btn-body {
         width: 100%;
